fixed admin body that was overflowing into footer & added margin to bottom of admin form

--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -25,6 +25,10 @@ $border-radius-large: 6px;
 // --------------------------------------------------
 // Admin Styles
 // --------------------------------------------------
+.admin-section {
+	margin-bottom: 40px;
+}
+
 
 input {
 	width: 300px;
